--- a/homework 2.html
+++ b/homework 2.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <body>
+        <div> 
+        <h1 style="color: brown;">ჩემი პროფილი</h1>
+        <p style="color: brown;">ქრისტინა ფერაძე 2024 წლიდან სწავლობს "რე:ედუქეით"-ში. </p>
+        <img style height="110px" width="150px" src ="unnamed (1).jpg" alt="kristinas photo">
+        <ul style="color: blueviolet;">
+          <li>საინტერესო</li>
+          <li>ეფექტური</li>
+          <li>ჰიბრიდული</li>
+        </ul>
+        <ol style="background-color: blueviolet; width: 120px ; height: 150px;">
+            <li>მოგზაურობა</li>
+            <li>დასვენება</li>
+            <li>სწავლა</li>
+        </ol>
+    
+        </div>
     
 </body>
 </html>
